# Resonance-AI-AI-Based-Speech-Analytics

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
samples/: sample1.m4a
scripts/: demo.py  generate_sample_audio.py
src/speech_analytics/: __init__.py  config.py  pipeline.py
src/speech_analytics/analytics/: __init__.py  dashboard.py
src/speech_analytics/api/: main.py  schemas.py
src/speech_analytics/emotion/: __init__.py  recognizer.py
src/speech_analytics/preprocessing/: __init__.py  audio.py
src/speech_analytics/sentiment/: __init__.py  classifier.py
src/speech_analytics/transcription/: __init__.py  whisper_engine.py
tests/: conftest.py  test_api.py  test_pipeline.py  test_preprocessing.py  test_sentiment.py
training/: train_sentiment.py
